fixed broken css

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,3 +1,7 @@
+body {
+  display: flex;
+  flex-direction: column;
+}
 .current {
     color: green;
-  }
+}
