--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,3 +1,9 @@
 ---
 ---
-@use "main";
+body {
+    display: flex;
+    flex-direction: column;
+}
+.current {
+    color: green;
+}
